# domaincheck

./: README.md  pyproject.toml
src/: domaincheck.py  strencodings.py
